# django-template

./: .env.example  LICENSE  README.md  cookiecutter.json  manage.py  pyproject.toml  requirements.txt
applications/api/: urls.py
applications/user/: apis.py  models.py  urls.py
applications/user/services/: queries.py
config/: urls.py
config/django/: base.py  local.py  production.py
config/settings/: drf.py  logging.py  sentry.py  tracing.py
hooks/: post_gen_project.py  pre_gen_project.py
requirements/: base.txt  local.txt  production.txt
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/applications/api/: apps.py
{{cookiecutter.project_slug}}/applications/authentication/: apps.py
{{cookiecutter.project_slug}}/applications/common/: apps.py
{{cookiecutter.project_slug}}/applications/user/: apis.py  apps.py  models.py
{{cookiecutter.project_slug}}/applications/user/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/applications/user/services/: commands.py
{{cookiecutter.project_slug}}/config/: urls.py
{{cookiecutter.project_slug}}/config/django/: base.py
{{cookiecutter.project_slug}}/config/settings/: swagger.py  tracing.py
