[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["ali.rasoulinejad <ali.rasoulinejad75@gmail.com>"]
readme = "README.md"
packages = [{include = "django_template"}]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2,<5.0"
djangorestframework = ">=3.14,<4.0"
django-redis = ">=5.2,<6.0"
django-environ = ">=0.10,<1.0"
drf-spectacular = ">=0.26,<1.0"
psycopg2-binary = ">=2.9,<3.0"


[tool.poetry.group.local.dependencies]
django-extensions = ">=3.2,<4.0"
django-debug-toolbar = ">=4.1,<5.0"


[tool.poetry.group.production.dependencies]
sentry-sdk = ">=1.25,<2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
